// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders correctly with a single link 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c6 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c7 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c7:hover {
  color: #eebbc3;
}

.c7:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c4 {
  color: #b8c1ec;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #eebbc3;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c5 {
  max-width: 600px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Contact
      </p>
      <h2
        class="c3"
      >
        Get in touch
      </h2>
      <p
        class="c4 c5"
        variant="large"
      >
        Let's talk.
      </p>
      <div
        class="c6"
      >
        <a
          aria-label="Email me"
          class="c7"
          href="mailto:test@test.com"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          Email me
        </a>
      </div>
    </section>
  </section>
</div>
`;

exports[`Contact renders correctly with all links 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c6 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c7 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c7:hover {
  color: #eebbc3;
}

.c7:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c4 {
  color: #b8c1ec;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #eebbc3;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c5 {
  max-width: 600px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Contact
      </p>
      <h2
        class="c3"
      >
        Let's work together
      </h2>
      <p
        class="c4 c5"
        variant="large"
      >
        I'm available for remote frontend and tech lead roles, freelance projects, and consulting. If you're building something with React, Next.js, or Shopify — let's talk.
      </p>
      <div
        class="c6"
      >
        <a
          aria-label="Email me"
          class="c7"
          href="mailto:test@test.com"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          Email me
        </a>
        <a
          aria-label="LinkedIn"
          class="c7"
          href="https://linkedin.com/in/andreaagostini"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          LinkedIn
        </a>
        <a
          aria-label="GitHub"
          class="c7"
          href="https://github.com/agostiniandrea"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          GitHub
        </a>
      </div>
    </section>
  </section>
</div>
`;
